--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,49 @@
 {
     "name": "avto-dev/static-references-data",
     "description": "Data for static references",
+    "keywords": [
+        "static",
+        "data",
+        "references"
+    ],
     "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "Avto Develop",
+            "name": "Avto Develops",
             "homepage": "https://github.com/avto-dev"
         }
     ],
+    "require": {
+        "php": "^5.6 || >=7.0 <=7.3"
+    },
+    "require-dev": {
+        "ext-json": "*",
+        "ext-mbstring": "*",
+        "phpunit/phpunit": "~5.7 || ^6.4",
+        "symfony/var-dumper": "~3.3 || ^3.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "AvtoDev\\StaticReferencesData\\": "sdk/php/src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "AvtoDev\\StaticReferencesData\\Tests\\": "sdk/php/tests"
+        }
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit --no-coverage --configuration ./sdk/php/phpunit.xml"
+    },
     "support": {
         "issues": "https://github.com/avto-dev/static-references-data/issues",
         "source": "https://github.com/avto-dev/static-references-data"
+    },
+    "suggest": {
+        "avto-dev/static-references-laravel": "Laravel package for a working with static references data."
+    },
+    "config": {
+        "sort-packages": true
     }
 }
