--- a/.gitattributes
+++ b/.gitattributes
@@ -7,4 +7,5 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 .styleci.yml export-ignore
+.scrutinizer.yml export-ignore
 .travis.yml export-ignore
