--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -25,7 +25,7 @@ build:
       tests:
         override:
           -
-            command: 'composer test'
+            command: './vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml'
     php70:
       environment:
         php: 7.0
@@ -33,7 +33,7 @@ build:
       tests:
         override:
           -
-            command: 'composer test'
+            command: './vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml'
     php71:
       environment:
         php: 7.1
@@ -41,4 +41,4 @@ build:
       tests:
         override:
           -
-            command: 'composer test'
+            command: './vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml'
