--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -21,33 +21,21 @@ build:
     php56:
       environment:
         php: 5.6
-
       tests:
         override:
           -
-            command: './vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml --coverage-clover=clover-file'
-            coverage:
-              file: 'clover-file'
-              format: 'clover'
+            command: './vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml'
     php70:
       environment:
         php: 7.0
-
       tests:
         override:
           -
-            command: './vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml --coverage-clover=clover-file'
-            coverage:
-              file: 'clover-file'
-              format: 'clover'
+            command: './vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml'
     php71:
       environment:
         php: 7.1
-
       tests:
         override:
           -
-            command: './vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml --coverage-clover=clover-file'
-            coverage:
-              file: 'clover-file'
-              format: 'clover'
+            command: './vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml'
