--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -17,37 +17,25 @@ build:
     memcached: false
     neo4j: false
     rabbitmq: false
+
   nodes:
     php56:
       environment:
         php: 5.6
-
       tests:
         override:
-          -
-            command: './vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml --coverage-clover=clover-file'
-            coverage:
-              file: 'clover-file'
-              format: 'clover'
+          - command: 'composer test-cover'
+
     php70:
       environment:
         php: 7.0
-
       tests:
         override:
-          -
-            command: './vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml --coverage-clover=clover-file'
-            coverage:
-              file: 'clover-file'
-              format: 'clover'
+          - command: 'composer test-cover'
+
     php71:
       environment:
         php: 7.1
-
       tests:
         override:
-          -
-            command: './vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml --coverage-clover=clover-file'
-            coverage:
-              file: 'clover-file'
-              format: 'clover'
+          - command: 'composer test-cover'
