--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         }
     ],
     "require": {
-        "php": "^5.6 || >=7.0 <=7.3"
+        "php": "^5.6 || >=7.0 <=7.3",
+        "ext-json": "*"
     },
     "require-dev": {
-        "ext-json": "*",
         "ext-mbstring": "*",
         "phpunit/phpunit": "~5.7 || ^6.4",
         "symfony/var-dumper": "~3.3 || ^3.4"
