--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -17,25 +17,36 @@ build:
     memcached: false
     neo4j: false
     rabbitmq: false
-
   nodes:
     php56:
       environment:
         php: 5.6
       tests:
         override:
-          - command: 'composer test-cover'
+          -
+            command: 'composer test-cover'
+            coverage:
+              file: './sdk/php/coverage/clover.xml'
+              format: 'clover'
 
     php70:
       environment:
         php: 7.0
       tests:
         override:
-          - command: 'composer test-cover'
+          -
+            command: 'composer test-cover'
+            coverage:
+              file: './sdk/php/coverage/clover.xml'
+              format: 'clover'
 
     php71:
       environment:
         php: 7.1
       tests:
         override:
-          - command: 'composer test-cover'
+          -
+            command: 'composer test-cover'
+            coverage:
+              file: './sdk/php/coverage/clover.xml'
+              format: 'clover'
