--- a/.gitattributes
+++ b/.gitattributes
@@ -8,4 +8,5 @@
 .gitignore export-ignore
 .styleci.yml export-ignore
 .scrutinizer.yml export-ignore
-.travis.yml export-ignore
+README.md export-ignore
+LICENSE export-ignore
