--- a/.gitattributes
+++ b/.gitattributes
@@ -9,4 +9,5 @@
 .styleci.yml export-ignore
 .scrutinizer.yml export-ignore
 README.md export-ignore
+CONTRIBUTING.md export-ignore
 LICENSE export-ignore
