--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# Composer
-composer.phar
+# Composer lock file
 composer.lock
 
 # IDEs
@@ -12,5 +11,6 @@ composer.lock
 # Temp dirs & trash
 /temp
 /tmp
-/build
+/coverage
 .DS_Store
+*.cache
