--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
         }
     ],
     "require": {
-        "php": "^5.6 || >=7.0",
-        "ext-json": "*",
+        "php": "^7.1.3",
         "tarampampam/wrappers-php": "^1.2"
     },
     "require-dev": {
-        "ext-mbstring": "*",
-        "phpunit/phpunit": "~5.7.10 || ^6.4 || ~7.0",
+        "ext-json": "*",
+        "phpunit/phpunit": "~7.5",
+        "phpstan/phpstan": "~0.12",
         "symfony/var-dumper": "~3.2 || ^4.0"
     },
     "autoload": {
@@ -35,8 +35,17 @@
         }
     },
     "scripts": {
-        "test": "@php ./vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml --no-coverage",
-        "test-cover": "@php ./vendor/bin/phpunit --configuration ./sdk/php/phpunit.xml  --coverage-html='./sdk/php/coverage/html'"
+        "phpunit": "@php ./vendor/bin/phpunit -c ./sdk/php/phpunit.xml.dist --no-coverage",
+        "phpunit-cover": "@php ./vendor/bin/phpunit -c ./sdk/php/phpunit.xml.dist --coverage-html='./sdk/php/coverage/html'",
+        "phpstan": "@php ./vendor/bin/phpstan analyze -c ./sdk/php/phpstan.neon.dist --no-progress --ansi",
+        "test": [
+            "@phpstan",
+            "@phpunit"
+        ],
+        "test-cover": [
+            "@phpstan",
+            "@phpunit-cover"
+        ]
     },
     "support": {
         "issues": "https://github.com/avto-dev/static-references-data/issues",
