--- a/.github/workflows/execute-tests.yml
+++ b/.github/workflows/execute-tests.yml
@@ -17,7 +17,7 @@ jobs: # Docs: <https://help.github.com/en/articles/workflow-syntax-for-github-ac
       fail-fast: false
       matrix:
         setup: ['basic', 'lowest']
-        php: ['7.0', '7.1', '7.2', '7.3', '7.4']
+        php: ['7.1', '7.2', '7.3', '7.4']
         include:
           - php: '5.6'
             setup: 'basic'
