--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,10 @@
 * text=auto
 
-/.*                     export-ignore
-/*.md                   export-ignore
-/tests                  export-ignore
-/.github                export-ignore
-/LICENSE*               export-ignore
-/sdk/php/.*             export-ignore
-/phpunit.xml            export-ignore
-/sdk/php/tests          export-ignore
-/sdk/php/phpunit.xml    export-ignore
+/.*                   export-ignore
+/.github              export-ignore
+/[Dd]ocker*           export-ignore
+/sdk/php/.*           export-ignore
+/sdk/php/tests        export-ignore
+/sdk/php/phpunit.xml* export-ignore
+/sdk/php/phpstan*     export-ignore
+/Makefile             export-ignore
