--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{yml,yaml,sh,conf}]
+[*.{yml,yaml,sh,conf,neon*}]
 indent_size = 2
 
 [Makefile]
