--- a/composer.json
+++ b/composer.json
@@ -15,24 +15,23 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "tarampampam/wrappers-php": "^1.2"
     },
     "require-dev": {
         "ext-json": "*",
         "opis/json-schema": "^1.0.8",
         "phpstan/phpstan": "~0.12",
-        "phpunit/phpunit": "~7.5",
-        "symfony/var-dumper": "~3.2 || ^4.0"
+        "phpunit/phpunit": "~7.5"
     },
     "autoload": {
         "psr-4": {
-            "AvtoDev\\StaticReferencesData\\": "sdk/php/src"
+            "AvtoDev\\StaticReferencesData\\": "sdk/php/src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "AvtoDev\\StaticReferencesData\\Tests\\": "sdk/php/tests"
+            "AvtoDev\\StaticReferencesData\\Tests\\": "sdk/php/tests/"
         }
     },
     "scripts": {
@@ -54,9 +53,5 @@
     },
     "suggest": {
         "avto-dev/static-references-laravel": "Laravel package for a working with static references data."
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "prefer-stable": true
+    }
 }
