--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     "require-dev": {
         "ext-json": "*",
         "opis/json-schema": "^1.0.8",
-        "phpstan/phpstan": "~0.12",
-        "phpunit/phpunit": "^9.3"
+        "phpstan/phpstan": "~0.12.34",
+        "phpunit/phpunit": "^8.5.4 || ^9.3"
     },
     "autoload": {
         "psr-4": {
