--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.2 || ^8.0",
         "tarampampam/wrappers-php": "^1.2 || ~2.0"
     },
     "require-dev": {
         "ext-json": "*",
         "opis/json-schema": "^1.0.8",
-        "phpstan/phpstan": "~0.12",
-        "phpunit/phpunit": "^8.5.4"
+        "phpstan/phpstan": "~0.12.34",
+        "phpunit/phpunit": "^8.5.4 || ^9.3"
     },
     "autoload": {
         "psr-4": {
